--- a/code/Remesh/MarchingCube/MarchingCube.vcxproj.filters
+++ b/code/Remesh/MarchingCube/MarchingCube.vcxproj.filters
@@ -18,9 +18,30 @@
     <ClInclude Include="isosurface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nonobtusemc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tribox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="datadef.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="isosurface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nonobtusemc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tribox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
