--- a/trunk/code/MCModule/Test/Test.vcxproj.filters
+++ b/trunk/code/MCModule/Test/Test.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="testmc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="testori.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="testmc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testori.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
