--- a/code/Remesh/MarchingCube/MarchingCube.vcxproj.filters
+++ b/code/Remesh/MarchingCube/MarchingCube.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="datadef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tilingnonobtusemc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="isosurface.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tilingnonobtusemc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
