--- a/trunk/code/MCModule/ObtuseOpt/ObtuseOpt.vcxproj
+++ b/trunk/code/MCModule/ObtuseOpt/ObtuseOpt.vcxproj
@@ -12,9 +12,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="nonobtoptn.h" />
+    <ClInclude Include="nonobtoptnHui.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nonobtoptn.cpp" />
+    <ClCompile Include="nonobtoptnHui.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EB53D2CF-63E6-4EDB-9550-FCD1E3AEF24A}</ProjectGuid>
@@ -43,7 +45,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>D:\Program_Library\Nlop\nlopt-2.2.4\api;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LibraryPath>D:\Program_Library\Nlop\nlopt-2.2.4\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
