--- a/trunk/code/MCModule/ObtuseOpt/ObtuseOpt.vcxproj.filters
+++ b/trunk/code/MCModule/ObtuseOpt/ObtuseOpt.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="nonobtoptn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nonobtoptnHui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nonobtoptn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nonobtoptnHui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
